[metadata]
license_file = LICENSE

[bdist_rpm]
release = 1
packager = Open Source DFIR maintainers <open-source-dfir-maintainers@googlegroups.com>
doc_files = LICENSE
build_requires = python3-setuptools
requires = libbde-python3 >= 20140531
           libewf-python3 >= 20131210
           libfsapfs-python3 >= 20181205
           libfsntfs-python3 >= 20191221
           libfvde-python3 >= 20160719
           libfwnt-python3 >= 20160418
           libqcow-python3 >= 20131204
           libsigscan-python3 >= 20191221
           libsmdev-python3 >= 20140529
           libsmraw-python3 >= 20140612
           libvhdi-python3 >= 20131210
           libvmdk-python3 >= 20140421
           libvshadow-python3 >= 20160109
           libvslvm-python3 >= 20160109
           python3-cffi >= 1.9.1
           python3-cryptography >= 2.0.2
           python3-dfdatetime >= 20200121
           python3-dfvfs >= 20200211
           python3-dtfabric >= 20170524
           python3-idna >= 2.5
           python3-pytsk3 >= 20160721
           python3-pyyaml >= 3.10

[bdist_wheel]
universal = 1

